--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grim-bot",
   "repository": "https://github.com/GrimIRC/grim-bot",
   "dependencies": {
+    "es6-shim": "^0.22.1",
     "twitter": "~0.1.19"
   }
 }
-
